# videoprocessing

./: .gitignore  CMakeLists.txt  README.md
include/: fvideo.h
src/: frameVideo.cpp  fvideo.cpp
